--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --ext js,graphql --exec babel-node src/index.js",
+    "start": "nodemon --ext js,graphql --exec babel-node ./src/index.js",
     "build": "babel src --out-dir dist",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "get-schema":"graphql get-schema -p prisma"
+    "get-schema": "graphql get-schema -p prisma"
   },
   "author": "AxDu",
   "license": "ISC",
