prisma.mutation added to nodejs project

--- a/prisma/docker-compose.yml
+++ b/prisma/docker-compose.yml
@@ -14,7 +14,7 @@ services:
           default:
             connector: postgres
             host: anurag-prisma-dev-server.cnzzu50mzmqz.us-east-2.rds.amazonaws.com
-            database: postgres
+            database: prisma_test
             user: anurag
             password: 152452abc
             ssl: true
