--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "author": "AxDu",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "graphql-cli": "^3.0.14",
     "graphql-yoga": "^1.18.3",
-    "prisma-binding": "^2.3.16",
-    "uuid": "^7.0.2"
+    "prisma-binding": "^2.3.16"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
