--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "env-cmd -f ./config/dev.env node ./dist/index.js",
+    "start": "node ./dist/index.js",
     "heroku-postbuild":"babel src --out-dir dist --copy-files",
     "dev": "env-cmd -f ./config/dev.env nodemon --ext js,graphql --exec babel-node ./src/index.js",
     "build": "babel src --out-dir dist",
