--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./dist/index.js",
-    "heroku-postbuild":"babel src --out-dir dist --copy-files",
+    "heroku-postbuild": "babel src --out-dir dist --copy-files",
     "dev": "env-cmd -f ./config/dev.env nodemon --ext js,graphql --exec babel-node ./src/index.js",
     "build": "babel src --out-dir dist",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,6 +14,7 @@
   "author": "AxDu",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.8.7",
     "bcryptjs": "^2.4.3",
     "env-cmd": "^10.1.0",
     "graphql-cli": "^3.0.14",
