--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "env-cmd -f ./config/dev.env nodemon --ext js,graphql --exec babel-node ./src/index.js",
     "build": "babel src --out-dir dist",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "get-schema": "graphql get-schema -p prisma"
+    "get-schema": "graphql get-schema -p prisma --dotenv ./config/dev.env"
   },
   "author": "AxDu",
   "license": "ISC",
