--- a/backup/package.json
+++ b/backup/package.json
@@ -4,35 +4,36 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node ./dist/index.js",
     "heroku-postbuild": "babel src --out-dir dist --copy-files",
-    "dev": "env-cmd ./config/dev.env nodemon --ext js,graphql --exec babel-node ./src/index.js",
-    "test": "env-cmd ./config/test.env jest --watch",
-    "get-schema": "graphql get-schema -p prisma --dotenv config/dev.env"
+    "dev": "env-cmd -f ./config/dev.env nodemon --ext js,graphql --exec babel-node ./src/index.js",
+    "build": "babel src --out-dir dist",
+    "test": "env-cmd -f ./config/test.env jest --watch",
+    "get-schema": "graphql get-schema -p prisma --dotenv ./config/dev.env"
   },
   "jest": {
     "globalSetup": "./tests/jest/globalSetup.js",
     "globalTeardown": "./tests/jest/globalTeardown.js"
   },
-  "author": "",
+  "author": "AxDu",
   "license": "ISC",
   "dependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
     "@babel/plugin-proposal-object-rest-spread": "^7.9.0",
+    "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.9.0",
     "@babel/register": "^7.9.0",
-    "@babel/polyfill": "^7.0.0",
-    "apollo-boost": "^0.1.14",
+    "apollo-boost": "^0.4.7",
     "bcryptjs": "^2.4.3",
-    "cross-fetch": "^2.2.2",
-    "env-cmd": "^8.0.2",
-    "graphql": "^14.0.2",
-    "graphql-cli": "^2.16.4",
-    "graphql-yoga": "^1.14.10",
-    "jsonwebtoken": "^8.3.0",
-    "prisma-binding": "^2.1.1"
+    "cross-fetch": "^3.0.4",
+    "env-cmd": "^10.1.0",
+    "graphql": "^14.6.0",
+    "graphql-cli": "^3.0.14",
+    "graphql-yoga": "^1.18.3",
+    "jsonwebtoken": "^8.5.1",
+    "prisma-binding": "^2.3.16"
   },
   "devDependencies": {
     "jest": "^25.3.0"
