--- a/prisma/docker-compose.yml
+++ b/prisma/docker-compose.yml
@@ -13,10 +13,10 @@ services:
         databases:
           default:
             connector: postgres
-            host: anurag-prisma-dev-server.cnzzu50mzmqz.us-east-2.rds.amazonaws.com
-            database: prisma_test
-            user: anurag
-            password: 152452abc
+            host: ec2-3-223-21-106.compute-1.amazonaws.com
+            database: dtubo6bvoo5iu
+            user: pwtddiavsqzmdq
+            password: 2004f59ef04e9af53ff81db9a82d649084405ec1d3cb3c74cf7186c2287ab1aa
             ssl: true
             rawAccess: true
             port: '5432'
