--- a/package.json
+++ b/package.json
@@ -21,18 +21,26 @@
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
     "@babel/plugin-proposal-object-rest-spread": "^7.9.0",
+    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/register": "^7.9.0",
-    "@babel/polyfill": "^7.0.0",
     "apollo-boost": "^0.1.14",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link": "^1.2.14",
+    "apollo-link-error": "^1.1.13",
+    "apollo-link-http": "^1.5.17",
+    "apollo-link-ws": "^1.0.20",
     "bcryptjs": "^2.4.3",
     "cross-fetch": "^2.2.2",
     "env-cmd": "^8.0.2",
     "graphql": "^14.0.2",
     "graphql-cli": "^2.16.4",
+    "graphql-tag": "^2.10.3",
     "graphql-yoga": "^1.14.10",
     "jsonwebtoken": "^8.3.0",
-    "prisma-binding": "^2.1.1"
+    "prisma-binding": "^2.1.1",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
     "jest": "^25.3.0"
