--- a/prisma/docker-compose.yml
+++ b/prisma/docker-compose.yml
@@ -13,10 +13,10 @@ services:
         databases:
           default:
             connector: postgres
-            host: ec2-3-223-21-106.compute-1.amazonaws.com
-            database: dtubo6bvoo5iu
-            user: pwtddiavsqzmdq
-            password: 2004f59ef04e9af53ff81db9a82d649084405ec1d3cb3c74cf7186c2287ab1aa
+            host: ec2-34-230-149-169.compute-1.amazonaws.com
+            database: d864n8ollt48c2
+            user: zywalkmhsnhjuo
+            password: 87eba4358540489aa62b7a3364d560efb4ab752303e56bb19e20c7ff557f0b40
             ssl: true
             rawAccess: true
             port: '5432'
